ansible/roles_ocp_workloads/ocp4_workload_openshift_ai/files/rhods-dashboard-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    platform.opendatahub.io/instance.name: default-dashboard
    internal.config.kubernetes.io/previousNamespaces: default
    internal.config.kubernetes.io/previousKinds: Route
    internal.config.kubernetes.io/previousNames: rhods-dashboard
    platform.opendatahub.io/type: OpenShift AI Self-Managed
    openshift.io/host.generated: 'true'
  name: rhods-dashboard
  namespace: redhat-ods-applications
  labels:
    app: rhods-dashboard
    app.kubernetes.io/part-of: rhods-dashboard
    app.opendatahub.io/rhods-dashboard: 'true'
    platform.opendatahub.io/part-of: dashboard
spec:
  to:
    kind: Service
    name: rhods-dashboard
    weight: 100
  port:
    targetPort: 8443
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
